translation-methods/lab-4/src/main/resources/Lab2Grammar.txt
grammar LabSecondGrammar;

list: stmt listPrime;
listPrime: stmt listPrime | EPSILON;
stmt: modifier ID type assignment SEMICOLON;
modifier: VAR | VAL;
type: COLON TYPE;
assignment: ASSIGN value | EPSILON;

ASSIGN: "=";
COLON: ":";
SEMICOLON: ";";
VAR: "var";
VAL: "val";
TYPE: "Int";
value: INT;

INT: "[0-9]+";

ID: "[a-zA-Z][a-zA-Z0-9]*";

WS: "[ \\n\\t\\r]+" -> skip;
